SP 3/stagging/landing-pages/landingpage-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: stagging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: landing-page
      metadata: landing-page
  template:
    metadata:
      labels:
        name: landing-page
        metadata: landing-page
    spec:
      containers:
        - name: landing-page
          image: varidmahdi/landingpage-new:2.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: stagging
spec:
  #type: LoadBalancer
  ports:
    - port: 80
      #nodePort: 30080
  selector:
    name: landing-page
